Fix: Lowercase symbols for light deuteron (d) and triton (t) are more standard

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -101,7 +101,7 @@ Table~\ref{tab:inclabla} summarise the key features of these models.
 \mr
 
 Projectiles & INCL/ABLA for protons, neutrons, pions ($\pi^-$, $\pi^0$, $\pi^+$)\\
-& D, T, $^3{\rm He}$, $\alpha$\\
+& d, t, $^3{\rm He}$, $\alpha$\\
 Energy range & $\sim$150~MeV -- $\sim$3GeV \\
 Target nuclei & Carbon -- Uranium \\
 Model features&  Stand alone mode with built in random number generation\\
