--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -316,7 +316,7 @@ up to $\alpha$ particle.
 Carbon beams are of particular interest for medical applications of Geant4, 
 and the method of composite projectiles has been used to extended INCL model to include carbon ions.
 This functionality is already provided in Geant4 9.2 for interested test users, 
-but more validation is need to be done before the formal release.
+but more validation is needed before the formal release.
 %and recently, a Carbon projectile support has been added to the INCL cascade. 
 
 \section{Conclusion}\label{sec:conclusion}
