Added reference to the spallation workshop report on INCL/ABLA

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -402,6 +402,9 @@ Journal of Physics: Conference Series 119 (2008) 032024, {\tt doi:10.1088/1742-6
 
 \bibitem{data} X.Ledoux et al., \emph{Spallation Neutron Production by
   0.8, 1.2, and 1.6 GeV Protons on Pb Targets} Phys. Rev. Lett. 82 (1999)
+
+\bibitem{inclTrieste} A. Boudard and J. Cugnon et al., \emph{Joint ICTP-IAEA Advanced Workshop on Model Codes for Spallation Reactions, page 29}, ICTP Trieste, Feb 2008
+
 %\bibitem{doxygen} \emph{Doxygen website} \\ {\tt http://\-www.doxygen.org/}
 %\item Strite S and Morkoc H 1992 {\it J. Vac. Sci. Technol.} B {\bf 10} 1237 
 \end{thebibliography}
