Update the view on ADS and spallation
Nowadays transmutation is the real goal.

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -40,14 +40,12 @@ modelling of spallation reactions, and validating neutron production and fragmen
 Our motivation is to develop Geant4 simulation tools for European Isotope Separation On-Line
 Radioactive Ion Beam Facility (EURISOL project) \cite{eurisol} and 
 Accelerator Driven Systems (ADSs) \cite{ads}. 
-The goal of accelerator driven sub-critical reactor development is to provide safer and more effective
-methods of nuclear power production. 
-
-The most important benefits of
-this new type of reactor include improved safety. In case of an
-emergency the accelerator can be shut down which in turn shuts down
-the reactor. Another important safety benefit is that the system
-transmutes nuclear waste to less harmful isotopes.
+The main goal of accelerator driven sub-critical reactor development
+is to provide a facility dedicated to the transmutation of long lived
+isotopes issued from the nuclear industry (mainly nuclear wastes from
+nuclear power plants).  Spallation is also used for the production
+of intense neutron sources of wide energy spectra which are useful for
+material study and fundamental measurements.
 
 To this aim we present a new Geant4 physics list, 
 based on INCL \cite{incl} intra-nuclear cascade model and ABLA de-excitation model \cite{abla, abla1, abla2} in Geant4 9.2. 
