Explain the difference in fragment production

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -242,7 +242,13 @@ Validation & Configuration & Figure \\
 \caption{\label{fig:fragpb}Mass distribution of fragments  for p(1.0~GeV) + $^{208}{\rm Pb}$ interaction 
 using the INCL and ABLA  models.
 Histograms are the results from the original FORTRAN version (black) 
-and new C++ implementation (red). Data is from Ref.~\cite{gsifragments}.}
+and new C++ implementation (red). Data is from Ref.~\cite{gsifragments}
+(the reason for the difference between the C++ and FORTRAN versions is under investigation).}
+%(the reason for the difference
+%between the fortran version and the C++ version in the fission part is
+%not yet fully understood... (which means in clear for us that there is
+%a mistake in the coding)).}
+
 \end{center}
 \end{figure}
 
