Added p(1.0 GeV + C) fragment production reference

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -174,7 +174,7 @@ code listings.
 Extensive validation has been performed to ensure the quality of INCL and ABLA models and correctness
 of Fortran to C+ translation. 
 Particularly fragmentation of C - Pb targets bombarded with 0.8 - 1.6 GeV protons has been investigated
-with simulations and results compared with GSI data~\cite{gsifragments}.
+with simulations and results compared with experimental data~\cite{carbone, gsifragments}.
 In addition to mass number distributions neutron production double differentials
 have been compared with accurate data from~\cite{data}.
 
@@ -202,9 +202,9 @@ Table~\ref{tab:validation} summarises the validations reported in this paper.
 %\caption{\label{label}Figure caption .}
 \end{minipage}\hspace{2pc}%
 \begin{minipage}{6cm}
-\caption{\label{fig:breakc}Comparison of mass number distributions from p(1.0~GeV) + C reaction, %PK::: ok?
+\caption{\label{fig:breakc}Comparison of mass number distributions from p(1.0~GeV) + C reaction,
 given INCL4.2 cascade with ABLA evaporation 
-and with standard Geant4 Fermi break up model against data from \cite{gsifragments}. %PK::: cite ok?
+and with standard Geant4 Fermi break up model against data from \cite{carbone}.
 Also, results from Geant4 Bertini cascade with internal fragmentation model are shown. }
 \end{minipage} 
 
@@ -408,6 +408,12 @@ Journal of Physics: Conference Series 119 (2008) 032024, {\tt doi:10.1088/1742-6
   0.8, 1.2, and 1.6 GeV Protons on Pb Targets} Phys. Rev. Lett. 82 (1999)
 
 \bibitem{inclTrieste} A. Boudard and J. Cugnon et al., \emph{Joint ICTP-IAEA Advanced Workshop on Model Codes for Spallation Reactions, page 29}, ICTP Trieste, Feb 2008
+
+\bibitem{carbone}
+D.L. Olson et al.,
+{\em Factorization of fragment-production cross sections in relativistic heavy-ion collisions},
+Phys. Rev. C28, 1602 (1983)
+{\sf [doi:10.1103/PhysRevC.28.1602]}
 
 %\bibitem{doxygen} \emph{Doxygen website} \\ {\tt http://\-www.doxygen.org/}
 %\item Strite S and Morkoc H 1992 {\it J. Vac. Sci. Technol.} B {\bf 10} 1237 
