Correct the order of validations and add carbon data citation

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -173,10 +173,19 @@ code listings.
 \section{Physics performance}\label{sec:performance}
 Extensive validation has been performed to ensure the quality of INCL and ABLA models and correctness
 of Fortran to C+ translation. 
-Particularly fragmentation of C - Pb targets bombarded with 0.8 - 1.6 GeV protons has been investigated
-with simulations and results compared with experimental data~\cite{carbone, gsifragments}.
-In addition to mass number distributions neutron production double differentials
-have been compared with accurate data from~\cite{data}.
+% Neutron production is the main method of validation
+Particularly double-differential neutron production cross sections of
+Al - Pb targets bombarded by 0.8 - 1.6 GeV protons has been
+investigated with simulations and comparison with accurate experimental data
+from~\cite{data}.
+% and fragment production comes after that
+In addition to neutron production also fragment production has been
+compared against data from Refs~\cite{carbone, gsifragments}.
+
+%% Particularly fragmentation of C - Pb targets bombarded with 0.8 - 1.6 GeV protons has been investigated
+%% with simulations and results compared with experimental data~\cite{carbone, gsifragments}.
+%% In addition to mass number distributions neutron production double differentials
+%% have been compared with accurate data from~\cite{data}.
 
 In case of light cascade remnant nuclei de-excitation Fermi break-up
 model is more appropriate choice than ABLA.
