Removed PK::: tags of issues that have been taken care of

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -267,7 +267,7 @@ and new C++ implementation (red). Data is from Ref.~\cite{gsifragments}
 \includegraphics[scale=0.80]{poster/images/pPbIsotopes.eps}
 
 \caption{\label{fig:fragisotopes}Fragment production of the INCL and ABLA  models 
-for p(1.0~GeV) + $^{208}{\rm Pb}$ interaction. %PK::: is this ok?
+for p(1.0~GeV) + $^{208}{\rm Pb}$ interaction.
 Histograms are the results from the original FORTRAN version (black)
 and new C++ implementation (red). Data is from Ref.\cite{gsifragments}.}
 
@@ -281,7 +281,7 @@ and new C++ implementation (red). Data is from Ref.\cite{gsifragments}.}
 \caption{\label{fig:neutronAl}Double-differential for neutron production cross section
     from Geant4 INCL and ABLA models in p(1.2 GeV) + Al $\rightarrow$ n + X reaction.
 Histograms are the results from the original FORTRAN version (black) and new C++ implementation (red), respectively. 
-Data is from Ref.~\cite{data}.} %PK::: is the data ref ok?
+Data is from Ref.~\cite{data}.}
 
 \end{center}
 
