--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -342,11 +342,11 @@ dedicated  Fortran codes INCL4.2 and ABLA v3, providing detailed modelling
 of spallation, fission, and evaporation.
 
 
-Currently the physics models for the treatment of light ion beams needs to be improved and is underwork.
+Currently the physics models for the treatment of light ion beams needs to be improved and is underway.
 %Ongoing work is the improvement of the physics models for the treatment of light ion beams.
 In future releases the physics list {\tt QGSP\_\-INCL\_ABLA} will be further optimised. 
-For high energy applications the physics list need to be modified
-so that additional model is added between QGSP and INCL/ABLA to treat interactions in 3-9~GeV energy range.
+For low energy applications the physics list need to be modified
+so that additional model is added below INCL/ABLA validity region to treat interactions of low energy particles.
 Further, our goal is to completely redesign the INCL cascade code using modern object-oriented techniques
 and taking benefit of the most recent INCL version \cite{inclTrieste}.
 
