Fix: casted -> cast

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -79,7 +79,7 @@ so physics lists concept is used to provide optimal set of functionality for spe
 
 \section{INCL and ABLA models in Geant4} \label{sec:models}
 
-INCL and ABLA models are casted into independent Fortran based Monte Carlo codes 
+INCL and ABLA models are cast into independent Fortran based Monte Carlo codes 
 INCL4.2 \cite{incl} and ABLA v3 \cite{abla}.
 Recently these implementations have been translated into C++ and codes distributed
 as part of Geant4 toolkit \cite{pk08bProceedings}. 
