Fix: first -> the first

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -83,7 +83,7 @@ INCL and ABLA models are cast into independent Fortran based Monte Carlo codes
 INCL4.2 \cite{incl} and ABLA v3 \cite{abla}.
 Recently these implementations have been translated into C++ and codes distributed
 as part of the Geant4 toolkit \cite{pk08bProceedings}. 
-First beta release of INCL 4.2 and ABLA v3 was in Geant4  9.1 (December 2007)~\cite{g4site}.
+The first beta release of INCL 4.2 and ABLA v3 was in Geant4  9.1 (December 2007)~\cite{g4site}.
 Currently the INCL and ABLA versions in Geant4 are straightforward
 Fortran to C++ translations.
 Table~\ref{tab:inclabla} summarise the key features of these models.
