Fix: summarise -> summarises

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -86,7 +86,7 @@ as part of the Geant4 toolkit \cite{pk08bProceedings}.
 The first beta release of INCL 4.2 and ABLA v3 was in Geant4  9.1 (December 2007)~\cite{g4site}.
 Currently the INCL and ABLA versions in Geant4 are straightforward
 Fortran to C++ translations.
-Table~\ref{tab:inclabla} summarise the key features of these models.
+Table~\ref{tab:inclabla} summarises the key features of these models.
 
 \begin{center}
 \begin{table}[h]
