--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -98,7 +98,7 @@ Table~\ref{tab:inclabla} summarises the key features of these models.
 {\bf INCL4.2}& \\
 \mr
 
-Projectiles & INCL/ABLA for protons, neutrons, pions ($\pi^-$, $\pi^0$, $\pi^+$)\\
+Projectiles & Protons, neutrons, pions ($\pi^-$, $\pi^0$, $\pi^+$)\\
 & d, t, $^3{\rm He}$, $\alpha$\\
 Energy range & $\sim$150~MeV -- $\sim$3GeV \\
 Target nuclei & Carbon -- Uranium \\
