--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -126,7 +126,7 @@ Output particles & Fission products, residual nuclei, p, n, $\alpha$\\
 
 We have implemented a new physics list called {\tt QGSP\_\-INCL\_ABLA} with
 spallation physics in mind. 
-The list is based on widely used {\tt QGSP\_BERT} physics list.
+The list is based on the widely used {\tt QGSP\_BERT} physics list.
 The new physics list uses INCL and ABLA models for proton,
 neutron, pion, deuteron, triton, He-3 and alpha inelastic interactions in the energy range 0~-~3~GeV.
 Above 3~GeV threshold Geant4 Bertini cascade model is used and above 15~GeV QGSP high energy model. However, since this list is intended for
