Fix: has -> have

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -175,7 +175,7 @@ Extensive validation has been performed to ensure the quality of INCL and ABLA m
 of Fortran to C+ translation. 
 % Neutron production is the main method of validation
 Particularly double-differential neutron production cross sections of
-Al - Pb targets bombarded by 0.8 - 1.6 GeV protons has been
+Al - Pb targets bombarded by 0.8 - 1.6 GeV protons have been
 investigated with simulations and comparison with accurate experimental data
 from~\cite{data}.
 % and fragment production comes after that
