Fix: given -> given by

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -212,7 +212,7 @@ Table~\ref{tab:validation} summarises the validations reported in this paper.
 \end{minipage}\hspace{2pc}%
 \begin{minipage}{6cm}
 \caption{\label{fig:breakc}Comparison of mass number distributions from p(1.0~GeV) + C reaction,
-given INCL4.2 cascade with ABLA evaporation 
+given by INCL4.2 cascade with ABLA evaporation 
 and with standard Geant4 Fermi break up model against data from \cite{carbone}.
 Also, results from Geant4 Bertini cascade with internal fragmentation model are shown. }
 \end{minipage} 
