Fix: image label

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -311,7 +311,7 @@ Data is from Ref.~\cite{data}.}
 \begin{figure}
 \begin{center}
 \includegraphics[scale=0.70]{images/proton1600MeVPb.eps}
-\caption{\label{fig:neutronFe}Double-differential for neutron production cross section
+\caption{\label{fig:neutronPb}Double-differential for neutron production cross section
     from Geant4 INCL and ABLA models in p(1.6~GeV) + Pb $\rightarrow$ n + X reaction.
 Data is from Ref.~\cite{data}.}
 
