Referees suggestion added: reference to figures

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -192,6 +192,8 @@ of Fortran to C++ translation.
 Particularly double-differential neutron production cross sections of
 Al - Pb targets bombarded by 0.8 - 1.6 GeV protons have been
 investigated with simulations and comparison with accurate experimental data from~\cite{data}.
+Validation results for proton beams of different energies 
+and on different targets are reported in the Figs.~\ref{fig:neutronAl}-\ref{fig:neutronPb}.
 % and fragment production comes after that
 In addition to neutron production also fragment production has been
 compared against data from Refs~\cite{gsifragments, carbone}.
