--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -138,7 +138,7 @@ The new physics list uses INCL and ABLA models for proton,
 neutron, pion, deuteron, triton, $^3{\rm He}$, 
 and $\alpha$ inelastic interactions in the energy range 0~--~3~GeV.
 Above 3~GeV threshold Geant4 Bertini cascade model~\cite{bertini} 
-is used and above 15~GeV QGSP high energy model. 
+is used, and above 10~GeV the parametrized LEP model. With energies higher than 15~GeV the QGSP high energy model is used. 
 However, since this list is intended for
 spallation and ADS applications we have not optimized the physics
 performance for energies higher than 3~GeV. 
@@ -157,7 +157,8 @@ Models&Description\\
 Electromagnetic physics & Geant4 standard EM\\
 Spallation modelling & INCL cascade with ABLA fission and evaporation (E~$<$~3~GeV)\\
 High energy models   & \\
-& Bertini cascade (3~GeV~$<$~E~$<$~15~GeV) \\
+& Bertini cascade (3~GeV~$<$~E~$<$~10~GeV) \\
+& LEP parametrized model (10~GeV~$<$~E~$<$~15~GeV) \\
 & QGSP (E~$>$~15~GeV)\\
 \br
 {\bf Use-cases} &  \\
