Added information about the inclusion of the QGSP_INCL_ABLA in Geant4 release
The physics list will be included in Geant4 9.3 release.

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -143,6 +143,7 @@ However, since this list is intended for
 spallation and ADS applications we have not optimized the physics
 performance for energies higher than 3~GeV. 
 Key features of {\tt QGSP\_INCL\_ABLA} physics list are summarised in Table~\ref{tab:list}.
+This physics list will be included in the December 2009 Geant4 9.3 release.
 
 \begin{center}
 \begin{table}[h]
